[package]
name = "lavinhash"
version = "1.0.0"
edition = "2021"
authors = ["LavinHash Contributors"]
description = "High-performance fuzzy hashing library implementing the DLAH (Dual-Layer Adaptive Hashing) algorithm"
license = "MIT"
repository = "https://github.com/yourusername/lavinhash"
homepage = "https://bdovenbird.com/lavinhash/"
documentation = "https://docs.rs/lavinhash"
readme = "README.md"
keywords = ["fuzzy-hashing", "similarity", "hash", "fingerprint", "dlah"]
categories = ["algorithms", "cryptography"]
rust-version = "1.70"

[lib]
name = "lavinhash"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rayon = "1.8"
bitvec = "1.0"
smallvec = "1.11"
thiserror = "1.0"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "fuzzy_hash"
harness = false
