[package]
name = "lavinhash"
version = "1.0.0"
edition = "2021"
authors = ["LavinHash Contributors"]
description = "High-performance fuzzy hashing library implementing the DLAH (Dual-Layer Adaptive Hashing) algorithm"
license = "MIT"
repository = "https://github.com/RafaCalRob/lavinhash"
homepage = "https://bdovenbird.com/lavinhash/"
documentation = "https://docs.rs/lavinhash"
readme = "README.md"
keywords = ["fuzzy-hashing", "similarity", "hash", "fingerprint", "dlah"]
categories = ["algorithms", "cryptography"]
rust-version = "1.70"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "lavinhash"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rayon = "1.8"
bitvec = "1.0"
smallvec = "1.11"
thiserror = "1.0"
libc = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
